fix: adjusting spacing

--- a/src/routes/resources/resources.css
+++ b/src/routes/resources/resources.css
@@ -2,19 +2,21 @@
     display: flex;
     flex-direction: column;
     width: 80%;
-    height: 240px;
+    height: 250px;
 }
 
 .title {
     font-weight: bold;
     font-size: 18px;
     margin-top: 10px;
+    height: 40px;
 }
 
 .description {
     margin: 10px auto 0px;
     height: 21px;
     width: 100%;
+    font-size: 14px;
 }
 
 .image {
@@ -35,6 +37,8 @@
     margin: 20px auto;
     border-radius: 10px;
     cursor: pointer;
+    align-self: flex-end;
+    margin-top: auto;
 }
 
 .resourcesCard {
